Child support and contact

--- a/co-delame/podporujeme-deti.html
+++ b/co-delame/podporujeme-deti.html
@@ -3,11 +3,26 @@ layout: layouts/hlavni-sablona.njk
 title: Podporujeme děti
 ---
 
-<div class="u-background u-background--color-primary-200">
+<div class="u-background u-background--color-primary-200 child-support">
     <section class="section-for u-wrapper u-padding-top-large u-padding-bottom-medium">
         <h1 class="heading-secondary section-for__title">Podporujeme děti</h1>
-        <p class="paragraph">Dlouhodobě podporujeme řadu projektů či akcí. Naši pomoc se snažíme nesměřovat pouze do jedné oblasti ve světě nezisku. Nebojíme se přiložit ruku k dílu, mnoho z našich spoluprací probíhá nejen na finanční bázi, ale i formou pomoci při organizaci akcí, výtvarných dílniček pro celou rodinu.
+        <p class="paragraph u-padding-bottom-small">Dlouhodobě podporujeme řadu projektů či akcí. Naši pomoc se snažíme nesměřovat pouze do jedné oblasti ve světě nezisku. Nebojíme se přiložit ruku k dílu, mnoho z našich spoluprací probíhá nejen na finanční bázi, ale i formou pomoci při organizaci akcí, výtvarných dílniček pro celou rodinu.
         </p>
-        <p class="paragraph">Velký zájem zaznamenáváme o skupinovou Canisterapii, Zoohrátky, Muzikorelaxaci a cvičení s Ergoterapeutickými prvky. Existuje totiž silný vztah mezi motorikou a smyslovým vnímáním. Mezi zájmové činnosti pravidelně zařazujeme i malování s Arteterapeutickými prvky, pro rodiče i děti. Tato setkání vzbouzí nadšení v každém ❤️ </p>
+
+        <div class="child-support__img u-center-text">
+            <img src="/images/20240603_171408.jpg" width="800" alt="">
+        </div>
+        <p class="paragraph u-margin-top-medium">Velký zájem zaznamenáváme o skupinovou Canisterapii, Zoohrátky, Muzikorelaxaci a cvičení s Ergoterapeutickými prvky. Existuje totiž silný vztah mezi motorikou a smyslovým vnímáním. Mezi zájmové činnosti pravidelně zařazujeme i malování s Arteterapeutickými prvky, pro rodiče i děti. Tato setkání vzbouzí nadšení v každém ❤️ </p>
+        <div class="child-support__grid u-center-text">
+            <picture class="child-support__img-2">
+                <img src="/images/20240304_164402.jpg" width="500" alt="">
+            </picture>
+            <picture class="child-support__img-2">
+                <img src="/images/20240520_165522.jpg" width="500" alt="">
+            </picture>
+            <picture class="child-support__img-2">
+                <img src="/images/20240609_185619.jpg" width="500" alt="">
+            </picture>
+        </div>
     </section>
 </div>
