--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ title: KoniPAS
         <div class="u-background u-background--color-primary-700">
             <section class="section-institutions u-wrapper u-padding-top-small u-padding-bottom-small">
                 <div aria-colspan="section-institutions__content" class="u-padding-bottom-small">
-                    <h2 class="heading-secondary section-institutions__title">Odborníci, školy, školky</h2>
-                    <p class="paragraph paragraph--white">„Pravidelně organizujeme setkání a přátelské aktivity pro rodiče s dětmi, které zahrnují i semináře a školení, vedené zkušenými pedagogy, odbornými lektory a terapeuty. Připravujeme obohacující program pro rodiče, zatímco si děti hrají v herně, kde je vymezen prostor výhradně pro malý kolektiv dětí a dospělých. Účastníci nejen navazují nová přátelství, ale také získávají nový pohled na svět a prožívají smysluplné okamžiky.“</p>
+                    <h2 class="heading-secondary section-institutions__title">Jak...</h2>
+                    <p class="paragraph paragraph--white">„Jak pravidelně organizujeme setkání a přátelské aktivity pro rodiče s dětmi, které zahrnují i semináře a školení, vedené zkušenými pedagogy, odbornými lektory a terapeuty. Připravujeme obohacující program pro rodiče, zatímco si děti hrají v herně, kde je vymezen prostor výhradně pro malý kolektiv dětí a dospělých. Účastníci nejen navazují nová přátelství, ale také získávají nový pohled na svět a prožívají smysluplné okamžiky.“</p>
                     <p class="u-center-text u-padding-top-small u-padding-bottom-small"><a class="btn btn--light" href="/o-nas/">Zjistit více</a></p>
                 </div>
                 <figcaption class="section-institutions__fig u-responzive-img__wrapp"><img class="u-responzive-img__img section-institutions__img" src="/images/praceholder-institutions.jpg" alt="dítě s PAS"></figcaption>
