--- a/komunitni-deni.html
+++ b/komunitni-deni.html
@@ -49,6 +49,8 @@ title: Komunitní dění
             </section>
         </div>
 
+        <p class="u-center-text u-padding-top-small u-padding-bottom-small"><a class="btn" href="https://www.facebook.com/KoniPasMilovice/" target="_blank" >Podívat se na termíny setkání na FB</a></p>
+
         <div class="section-o-nas-2__third-content u-margin-top-medium">
             <div class="section-o-nas-2__part-of-flex">
                 <h3 class="heading-tertiary u-margin-top-medium">Cesta pohádkovým lesem</h3>
