--- a/o-nas.html
+++ b/o-nas.html
@@ -41,8 +41,9 @@ title: O nás
             <p class="paragraph">Aktivita KoniPAS vznikla pod spolkem Maminky dětem, z. s. v lednu 2021. Již tehdy nabízela pravidelná setkání, vzájemné sdílení, možnost vyměnit si užitečné rady, tipy a zkušenosti, občas seminář s odborníkem. Podobné služby pro rodiny se specifickými potřebami nikdo jiný v širokém okolí nenabízí. Postupně se vytvořila parta aktivních rodičů, kteří byli ochotni posouvat vše ještě o krůček dál. KoniPAS se začal více osamostatňovat a založil si vlastní organizaci KoniPAS Milovice, z. s.</p>
             <h4>Chceš nás poznat blíž? Stav se na kafe!</h4>
             <p class="paragraph">Jsme rodiče, jsme přátelé, jsme rodina. Neptáme se, co tě přivádí. Nebudeme se vyptávat na věci, o kterých zatím mluvit nedokážeš nebo nechceš. Máme tolik jiných témat k hovoru nad kávou! Sdílíme zkušenosti i nápady. Tvoříme, smějeme se, tančíme, skotačíme… Užíváme si sounáležitost a přítomný okamžik. Sdílíme čas a prostor, ať už skupinovou aktivitou nebo každý sám. Společně se radujeme z našich malých-velkých úspěchů, máme pochopení pro svérázné chování našich dětí a hlavně – nesoudíme.</p>
+            <p class="paragraph u-font-italic u-center-text">↓↓↓&nbsp;&nbsp;&nbsp; Aktuální program setkání naleznete na našich facebookových stránkách&nbsp;&nbsp;&nbsp; ↓↓↓</p>
         </div>
-        <p class="u-center-text u-padding-bottom-small u-padding-top-small"><a class="btn" target="_blank" href="https://www.facebook.com/KoniPasMilovice/">Podívat se na termíny setkání</a></p>
+        <p class="u-center-text u-padding-bottom-small u-padding-top-small"><a class="btn" target="_blank" href="https://www.facebook.com/KoniPasMilovice/">Podívat se na termíny setkání na FB</a></p>
     </section>
 
 
