--- a/kontakt.html
+++ b/kontakt.html
@@ -8,13 +8,15 @@ title: Kontakt
         <h1 class="heading-primary">Kontakt</h1>
         <div class="section-o-nas-2__third-content u-padding-bottom-medium">
             <div class="section-o-nas-2__part-of-flex">
-                <h2 class="">Sídlo</h2>
-                <p class="paragraph">KoniPAS Milovice, z.s <br>Průběžná 606 <br>28923 Milovice</p>
+                <h2 class="">Sídlo spolku</h2>
+                <p class="paragraph">KoniPAS Milovice, z.s. <br>Průběžná 606 <br>28923 Milovice</p>
                 <p class="paragraph">mobil: 733 612 720</p>
             </div>
             <div class="section-o-nas-2__part-of-flex">
-                <h2 class="">Kontaktní údaje rodinného centra kde se scházíme:</h2>
-                <p class="paragraph">Rodinné cetrum Milovice <br>1.patro HERNA, vstup u lezecké stěny<br>Komenského 581, Mladá, 28924 Milovice <br> Průvodce setkáváním: Žaneta Mihališin </p>
+                <h2 class="">Kde se scházíme:</h2>
+                <p class="paragraph">Rodinné cetrum Milovice <br>Komenského 581, Mladá, 28924 Milovice <br> <br>1.patro HERNA (bezbariérový přístup), vstup u lezecké stěny</p>
+                <p class="paragraph">a</p>
+                <p class="paragraph">Domov Mladá <br> Rakouská 552, 28923 Milovice <br> přízemí, prostory denního stacionáře</p>
             </div>
         </div>
     </section>
