--- a/co-delame/poradame-akce.html
+++ b/co-delame/poradame-akce.html
@@ -6,12 +6,27 @@ title: Pořádáme akce
 <div class="u-background u-background--color-primary-200">
     <section class="section-for u-wrapper u-padding-top-large u-padding-bottom-medium">
         <h1 class="heading-secondary section-for__title">Pořádáme akce</h1>
-        <h2 class="heading-tertiary u-margin-top-medium u-padding-bottom-medium">Již tradičně jsme součástí akcí pro rodiny, našich partnerů.</h2>
-        <p class="paragraph">Město Milovice - 1.6.2024 Sportovní den</p>
-        <p class="paragraph">Předměřice nad Labem - 1.6.2024 Den dětí</p>
-        <p class="paragraph">Domov Mladá - 14.6. Festival žijeme spolu</p>
-        <p class="paragraph">Rodinné centrum - 18.5. Slavnost rodin</p>
-        <p class="paragraph">Zámek Brandýs nad Labem -  23.3 Zámecký Jarmark</p>
-        <p class="u-center-text u-padding-top-small"><a class="btn" href="https://www.facebook.com/KoniPasMilovice" target="_blank">Podívat se na termíny setkání na FB</a></p>
+        <h2 class="heading-quartiary u-margin-top-medium u-padding-bottom-medium u-center-text">Již tradičně jsme součástí akcí pro rodiny, našich partnerů.</h2>
+        <div class="u-center-text">
+            <p class="paragraph">Město Milovice - 1.6.2024 Sportovní den</p>
+            <p class="paragraph">Předměřice nad Labem - 1.6.2024 Den dětí</p>
+            <p class="paragraph">Domov Mladá - 14.6. Festival žijeme spolu</p>
+            <p class="paragraph">Rodinné centrum - 18.5. Slavnost rodin</p>
+            <p class="paragraph">Zámek Brandýs nad Labem -  23.3 Zámecký Jarmark</p>
+            <p class="u-center-text u-padding-top-small u-padding-bottom-medium"><a class="btn" href="https://www.facebook.com/KoniPasMilovice" target="_blank">Podívat se na termíny setkání na FB</a></p>
+        </div>
+
+        <div class="child-support__grid u-center-text">
+            <picture class="child-support__img-2">
+                <img src="/images/20240601_160050.jpg" width="500" alt="">
+            </picture>
+            <picture class="child-support__img-2">
+                <img src="/images/20240614_130056.jpg" width="500" alt="">
+            </picture>
+            <picture class="child-support__img-2">
+                <img src="/images/20240614_130119.jpg" width="500" alt="">
+            </picture>
+        </div>
+
     </section>
 </div>
