--- a/co-delame/pujcujeme-pomucky.html
+++ b/co-delame/pujcujeme-pomucky.html
@@ -9,5 +9,8 @@ title: Půjčujeme pomůcky
         <p class="paragraph">Rodiče si mohou vypůjčit na víkend senzorické deky, ale třeba i      knihy o smyslovém vnímání.
         <br> Poplatek je 30kč na den, (proti záloze 1000kč proti poničení). 
         <br> Pomůcky zapůjčujeme čisté a v dobrém technickém stavu. V případě vrácení nepřiměřeně znečištěné pomůcky jsou požadovány náklady na opravu.</p>
+        <div class="child-support__img u-center-text">
+            <img src="/images/IMG-20240518-WA0000.jpg" width="700" alt="">
+        </div>
     </section>
 </div>
