--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@ title: KoniPAS
                         <h3 class="section-gift__qr-title">Náš účet:</h3>
                         <p class="section-gift__num-account u-padding-bottom-small">2602681682 / 2010</p>
                         <picture class="section-gift__img"><img src="/images/qr-kod.png" alt="QR kód pro platbu"></picture>
-                        <ol class="section-gift__instructions">
+                        <!-- <ol class="section-gift__instructions">
                             <li>Jděte do svého internetového bankovnictví</li>
                             <li>V platbách najdete Naskenovat QR kód</li>
                             <li>Naskenujte QR kód namířením mobilu na kód</li>
                             <li>Do příjemce napište konipas (je to jen info pro vás)</li>
                             <li>Nechte částku na 100kč nebo napište vlastní</li>
                             <li>Odešlete platbu</li>
-                        </ol>
+                        </ol> -->
                     </div>
                     <div class="section-gift__qr-col-2-of-2">
                         <p class="paragraph">Pracujeme na sestavení multidisciplinárního týmu, který poskytne potřebnou komplexní péči rodinám ve vhodných prostorách k tomu určených. Chceme nabízet rozvojové aktivity, smyslové terapie a vícedenní skupinové pobyty pro rodiny. Avšak k naplnění tohoto cíle potřebujeme i Vaši pomoc.</p>
