--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@ title: KoniPAS
                         <p class="card-action__p"><a class="card-action__link" href="/co-delame/pomahame-rodinam/">Pomáháme rodinám</a></p>
                     </article>
                     <article class="card-action">
-                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-2.jpg" alt=""></a>
+                        <a class="card-action__link-grid" href="/co-delame/vzdelavame-rodice/"><img class="card-action__img" src="/images/placeholder-actions-2.jpg" alt=""></a>
                         <p class="card-action__p"><a class="card-action__link" href="co-delame/vzdelavame-rodice/">Vzděláváme rodiče</a></p>
                     </article>
                     <article class="card-action">
-                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-3.jpg" alt=""></a>
+                        <a class="card-action__link-grid" href="/vize/"><img class="card-action__img" src="/images/placeholder-actions-3.jpg" alt=""></a>
                         <p class="card-action__p"><a class="card-action__link" href="/vize/">Sdílíme vizi</a></p>
                     </article>
 
                     <!-- 3-6 -->
                     <article class="card-action">
-                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-4.jpg" alt=""></a>
+                        <a class="card-action__link-grid" href="/komunitni-deni/"><img class="card-action__img" src="/images/placeholder-actions-4.jpg" alt=""></a>
                         <p class="card-action__p"><a class="card-action__link" href="/komunitni-deni/">Tvoříme komunitu</a></p>
                     </article>
                     <article class="card-action">
-                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-5.jpg" alt=""></a>
+                        <a class="card-action__link-grid" href="/co-delame/podporujeme-deti/"><img class="card-action__img" src="/images/placeholder-actions-5.jpg" alt=""></a>
                         <p class="card-action__p"><a class="card-action__link" href="co-delame/podporujeme-deti/">Podporujeme děti</a></p>
                     </article>
                     <article class="card-action">
-                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-6.jpg" alt=""></a>
+                        <a class="card-action__link-grid" href="co-delame/poradame-akce/"><img class="card-action__img" src="/images/placeholder-actions-6.jpg" alt=""></a>
                         <p class="card-action__p"><a class="card-action__link" href="co-delame/poradame-akce/">Pořádáme akce</a></p>
                     </article>
 
@@ -63,7 +63,7 @@ title: KoniPAS
                         <p class="card-action__p"><a class="card-action__link" href="/co-delame/sluzby-a-terapie/">Služby &amp; terapie</a></p>
                     </article>
                     <article class="card-action">
-                        <a class="card-action__link-grid" href="#"><img class="card-action__img" src="/images/placeholder-actions-8.jpg" alt=""></a>
+                        <a class="card-action__link-grid" href="/co-delame/pujcujeme-pomucky/"><img class="card-action__img" src="/images/placeholder-actions-8.jpg" alt=""></a>
                         <p class="card-action__p"><a class="card-action__link" href="co-delame/pujcujeme-pomucky/">Půjčujeme pomůcky</a></p>
                     </article>
                     <article class="card-action">
