--- a/kontakt.html
+++ b/kontakt.html
@@ -14,7 +14,7 @@ title: Kontakt
             </div>
             <div class="section-o-nas-2__part-of-flex">
                 <h2 class="">Kde se scházíme:</h2>
-                <p class="paragraph">Rodinné cetrum Milovice <br>Komenského 581, Mladá, 28924 Milovice <br> <br>1.patro HERNA (bezbariérový přístup), vstup u lezecké stěny</p>
+                <p class="paragraph">Rodinné cetrum Milovice <br>Komenského 581, Mladá, 28924 Milovice <br>1.patro HERNA (bezbariérový přístup), vstup u lezecké stěny</p>
                 <p class="paragraph">a</p>
                 <p class="paragraph">Domov Mladá <br> Rakouská 552, 28923 Milovice <br> přízemí, prostory denního stacionáře</p>
             </div>
