--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@ title: Kontakt
 
 <div class="u-background u-background--color-primary-200">
     <section class="section-o-nas u-wrapper">
-        <h1 class="heading-primary">Kontakt</h1>
+        <h1 class="heading-primary u-center-text u-margin-top-medium u-padding-bottom-medium">Kontakt</h1>
         <div class="section-o-nas-2__third-content u-padding-bottom-medium">
             <div class="section-o-nas-2__part-of-flex">
                 <h2 class="">Sídlo spolku</h2>
