--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ title: KoniPAS
 
         <section class="section-hero">
             <div class="section-hero__content">
-                <h1 class="heading-secondary">,,Rozumět znamená pomáhat“</h1>
-                <p class="paragraph">Hlavním smyslem podpůrné skupiny je propojení, sounáležitost se všemi členy rodiny, přijetí. Spojuje nás společné, jsme rodina, jsme komunita, známe osoby se speciálními potřebami. Čas, zastavit se s rodinou. To pravé místo je s námi. Vítejte tu s námi!</p>
+                <h1 class="heading-secondary">„Rozumět znamená pomáhat“ </h1>
+                <p class="paragraph">Vítáme vás na stránkách našeho spolku a podpůrné skupiny, jejímž hlavním smyslem je propojení, sounáležitost a přijetí. Vytváříme bezpečné a podporující prostředí pro rodiny dětí se speciálními potřebami, na našich setkáních získáte pochopení a podporu. Vítejte v naší komunitě, kde je prostor pro každého a jsme tu pro sebe navzájem.</p>
                 <p><a class="btn" href="/o-nas/">O nás</a></p>
             </div>
             <div class="section-hero__hexa">
@@ -59,7 +59,7 @@ title: KoniPAS
 
                     <!-- 6-9 -->
                     <article class="card-action">
-                        <a class="card-action__link-grid" href="/co-delame/nase-sluzby/"><img class="card-action__img" src="/images/placeholder-actions-7.jpg" alt=""></a>
+                        <a class="card-action__link-grid" href="/co-delame/sluzby-a-terapie/"><img class="card-action__img" src="/images/placeholder-actions-7.jpg" alt=""></a>
                         <p class="card-action__p"><a class="card-action__link" href="/co-delame/sluzby-a-terapie/">Služby &amp; terapie</a></p>
                     </article>
                     <article class="card-action">
@@ -96,8 +96,8 @@ title: KoniPAS
         <div class="u-background u-background--color-primary-700">
             <section class="section-institutions u-wrapper u-padding-top-small u-padding-bottom-small">
                 <div aria-colspan="section-institutions__content" class="u-padding-bottom-small">
-                    <h2 class="heading-secondary section-institutions__title">Jak...</h2>
-                    <p class="paragraph paragraph--white">„Jak pravidelně organizujeme setkání a přátelské aktivity pro rodiče s dětmi, které zahrnují i semináře a školení, vedené zkušenými pedagogy, odbornými lektory a terapeuty. Připravujeme obohacující program pro rodiče, zatímco si děti hrají v herně, kde je vymezen prostor výhradně pro malý kolektiv dětí a dospělých. Účastníci nejen navazují nová přátelství, ale také získávají nový pohled na svět a prožívají smysluplné okamžiky.“</p>
+                    <h2 class="heading-secondary section-institutions__title">Jak</h2>
+                    <p class="paragraph paragraph--white">Pravidelně organizujeme setkání a přátelské aktivity pro rodiče s dětmi, které zahrnují i semináře a školení, vedené zkušenými pedagogy, odbornými lektory a terapeuty. Připravujeme obohacující program pro rodiče, zatímco si děti hrají v herně, kde je vymezen prostor výhradně pro malý kolektiv dětí a dospělých. Účastníci nejen navazují nová přátelství, ale také získávají nový pohled na svět a prožívají smysluplné okamžiky.</p>
                     <p class="u-center-text u-padding-top-small u-padding-bottom-small"><a class="btn btn--light" href="/o-nas/">Zjistit více</a></p>
                 </div>
                 <figcaption class="section-institutions__fig u-responzive-img__wrapp"><img class="u-responzive-img__img section-institutions__img" src="/images/praceholder-institutions.jpg" alt="dítě s PAS"></figcaption>
