--- a/komunitni-deni.html
+++ b/komunitni-deni.html
@@ -54,7 +54,7 @@ title: Komunitní dění
         <div class="section-o-nas-2__third-content u-margin-top-medium">
             <div class="section-o-nas-2__part-of-flex">
                 <h3 class="heading-tertiary u-margin-top-medium">Cesta pohádkovým lesem</h3>
-                <p class="paragraph">Akce dne 25.9 v Milovicích ,,Cesta pohádkovým lesem" měla obrovskou účast rodin ❤️ Děti nadšeně plnili úkoly, vyhrávali ceny v tombole, tvořili v dílničce. Pohladili si zvířátka z chovu Kristýny Novotné. Celé rodiny se potěšili nabídce, v altánu s občerstvením a domácími výrobky maminek z Rodinné centrum Milovice </p>
+                <p class="paragraph">Akce dne 24. 9. 2023 v Milovicích „Cesta pohádkovým lesem" měla obrovskou účast rodin ❤ Děti nadšeně plnily úkoly, vyhrávaly ceny v tombole, tvořily v dílničce. Pohladily si zvířátka z chovu Kristýny Novotné. Celé rodiny si užívaly nabídky altánu s občerstvením s domácími výrobky maminek z Rodinného centra Milovice.</p>
                 <p class="paragraph">Zahřál nás každý pozdrav od Vás i návštéva u nás na stánku s tombolou ❤️</p>
             </div>
             <figcaption class="section-o-nas-2__fig u-padding-top-small"><img class="section-o-nas-2__img" src="/images/IMG_20230517_165920.jpg" width="500" alt="spojené ruce"></figcaption>
