--- a/komunitni-deni.html
+++ b/komunitni-deni.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: layouts/hlavni-sablona.njk
 title: Komunitní dění
 ---
@@ -67,4 +67,4 @@ title: Komunitní dění
     <section class="section-for u-wrapper u-padding-top-large u-padding-bottom-medium">
         <picture class="comunity__fig"><img class="comunity__img" src="/images/letak_brezen-2024.jpeg" alt="latáček akcí březen 2024"></picture>
     </section>
-</div>
+</div> -->
