--- a/o-nas.html
+++ b/o-nas.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: layouts/hlavni-sablona.njk
 title: O nás
 ---
@@ -92,4 +92,4 @@ title: O nás
             </div>
         </section>
     </div>
-</div>
+</div> -->
