--- a/o-nas.html
+++ b/o-nas.html
@@ -1,4 +1,4 @@
-<!-- ---
+---
 layout: layouts/hlavni-sablona.njk
 title: O nás
 ---
@@ -44,12 +44,12 @@ title: O nás
             <p class="paragraph u-font-italic u-center-text">↓↓↓&nbsp;&nbsp;&nbsp; Aktuální program setkání naleznete na našich facebookových stránkách&nbsp;&nbsp;&nbsp; ↓↓↓</p>
         </div>
         <p class="u-center-text u-padding-bottom-small u-padding-top-small"><a class="btn" target="_blank" href="https://www.facebook.com/KoniPasMilovice/">Podívat se na termíny setkání na FB</a></p>
-    </section> -->
+    </section>
 
 
     <!-- Medailonky -->
 
-    <!-- <div class="u-background u-background--color-primary-200">
+    <div class="u-background u-background--color-primary-200">
         <section class="section-medallions u-wrapper">
             <h2 class="heading-secondary section-medallions__title u-center-text">Medailonky</h2>
             <div class="section-medallions__grid u-padding-top-small">
@@ -92,4 +92,4 @@ title: O nás
             </div>
         </section>
     </div>
-</div> -->
+</div>
