--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: KoniPAS
 
         <!--Hero-->
 
-        <!-- <section class="section-hero">
+        <section class="section-hero">
             <div class="section-hero__content">
                 <h1 class="heading-secondary">„Rozumět znamená pomáhat“ </h1>
                 <p class="paragraph">Vítáme vás na stránkách našeho spolku a podpůrné skupiny, jejímž hlavním smyslem je propojení, sounáležitost a přijetí. Vytváříme bezpečné a podporující prostředí pro rodiny dětí se speciálními potřebami, na našich setkáních získáte pochopení a podporu. Vítejte v naší komunitě, kde je prostor pro každého a jsme tu pro sebe navzájem.</p>
@@ -20,11 +20,11 @@ title: KoniPAS
                     <div class="section-hero__img-wrapp section-hero__img-wrapp--3"></div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
         <!--Co děláme-->
         
-        <!-- <div class="u-background u-background--color-primary-500">
+        <div class="u-background u-background--color-primary-500">
             <section class="section-actions u-wrapper u-padding-top-small u-padding-bottom-medium">
                 <h2 class="heading-secondary section-actions__title">Co děláme</h2>
                 <div class="grid u-padding-top-small u-padding-bottom-small">
@@ -72,7 +72,7 @@ title: KoniPAS
                     </article>
                 </div>
             </section>
-        </div> -->
+        </div>
 
         <!--Pro koho-->
 
@@ -136,16 +136,3 @@ title: KoniPAS
         </div>
 
     </main>
-
-
-    
-        <!--Pro koho
-
-        <div class="u-background u-background--color-primary-200">
-            <section class="section-for u-wrapper u-padding-top-small u-padding-bottom-medium">
-                <h2 class="heading-secondary section-for__title">Pro koho</h2>
-            </section>
-        </div>
-
-
-        -->
