--- a/co-delame/poradame-akce.html
+++ b/co-delame/poradame-akce.html
@@ -18,7 +18,7 @@ title: Pořádáme akce
 
         <div class="child-support__grid u-center-text">
             <picture class="child-support__img-2">
-                <img src="/images/20240601_160050.jpg" width="550" alt="">ů
+                <img src="/images/20240601_160050.jpg" width="550" alt="">
             </picture>
             <picture class="child-support__img-2">
                 <img src="/images/20240614_130056.jpg" width="550" alt="">
